--- a/csslesson2.css
+++ b/csslesson2.css
@@ -5,6 +5,6 @@ body {
 
 .question {
 	color: rgb(113, 30, 30);
-	border: 2px solid rgb(165, 13, 13);
-	font-size: 1.5rem;
+	border: 5px solid rgb(165, 13, 13);
+	border-color: rgb(165, 13, 13);
 }
