--- a/test.css
+++ b/test.css
@@ -1,1 +1,39 @@
+body {
+    background-color:#222222;
+    color: white;
+}
 
+#card-container {
+    width: 512px;
+    height: 256px;
+    background-color: #111111;
+
+    margin: 0 auto;
+    padding: 12px;
+    text-align: center;
+
+    border-style: solid;
+    border-width: 2px;
+    border-color: #555555;
+    border-radius: 5px;
+}
+
+#name {
+    margin-top: 64px;
+
+    text-transform: uppercase;
+    font-family: Helvetica;
+    font-weight: 200;
+
+    border-bottom: solid 1px white;
+    padding-bottom: 12px;
+}
+
+#role {
+    color: #999999;
+}
+
+.f-cambria {
+    font-family: Cambria;
+    font-weight: 400;
+}
